--- a/assets/scss/sign-up.scss
+++ b/assets/scss/sign-up.scss
@@ -8,12 +8,11 @@ body{
       background-attachment:fixed;
 }
 
-
-.login-container {
+.signUp-container {
     background: rgba(255, 255, 255, 0.1);
     border-radius: 20px;
     width: 100vh;
-    height: 50vh;
+    height: 70vh;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -23,42 +22,53 @@ body{
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: center;
+    padding-top: 40px;
     flex-direction: column;
     color: white;
-    font-family: $primary-font;
     font-weight: 800;
     h1{
         font-family: $primary-title;
-        font-size: 60px;
+        font-size: 50px;
         margin: 0;
     }
     span{
         color: $secondary;
         font-family: $secondary-title;
-        font-size: 58px;
+        font-size: 52px;
     }
     h2{
-        font-family: $primary-font;
-        font-size: 18px;
+        font-family: $secondary-font;
+        font-size: 26px;
+        text-transform: uppercase;
+        margin-top: 10px;
+        margin-bottom: 0;
     }
-    .buttons{
-        margin-top: 20px;
-        width: 60%;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
+    .form{
+         .input{
+            display: flex;
+            flex-direction: column;
+            margin: 25px 0;
+            font-family: $primary-font;
+            label{
+                font-size: 12px;
+                font-weight: 500;
+            }
+            input{
+                width: 270px;
+                height: 35px;
+                border-radius: 30px;
+                border: none;
+                text-indent: 15px;
+            }
+        }
         button{
             font-family: $secondary-font;
-            font-weight: 800;
-            font-size: 22px;
-            text-transform: uppercase;
             color: white;
-            background-color: transparent;
             border: none;
+            background-color: transparent;
+            font-size: 15px;
         }
         button:hover{
-            opacity: 0.5;
             cursor: pointer;
         }
     }
