--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0');
 
 $primary: #2e2e5d;
 $secondary: #6c6cdd;
@@ -10,3 +11,59 @@ $primary-title: 'Georgia Pro Light';
 $secondary-title: 'Dancing Script';
 $primary-font: 'Open Sans';
 $secondary-font: 'Red Hat Display';
+
+.loader-container{
+    width: 100vh;
+    height: 55vh;
+    position: absolute;
+    top: 20vw;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    .dots-spinner, .dots-spinner * {
+        box-sizing: border-box;
+      }
+  
+      .dots-spinner {
+        height: 15px;
+        width: calc(30px * 3);
+      }
+  
+      .dots-spinner .dot {
+        width: 15px;
+        height: 15px;
+        margin: 0 calc(15px / 2);
+        border: calc(15px / 5) solid $secondary;
+        border-radius: 50%;
+        float: left;
+        transform: scale(0);
+        animation: dots-spinner-animation 1000ms ease infinite 0ms;
+      }
+  
+      .dots-spinner .dot:nth-child(1) {
+        animation-delay: calc(300ms * 1);
+      }
+  
+      .dots-spinner .dot:nth-child(2) {
+        animation-delay: calc(300ms * 2);
+      }
+  
+      .dots-spinner .dot:nth-child(3) {
+        animation-delay: calc(300ms * 3);
+  
+      }
+  
+      @keyframes dots-spinner-animation {
+        50% {
+          transform: scale(1);
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
+      }
+  }
