--- a/assets/scss/sign-up.scss
+++ b/assets/scss/sign-up.scss
@@ -67,9 +67,9 @@ body{
             border: none;
             background-color: transparent;
             font-size: 15px;
-        }
-        button:hover{
-            cursor: pointer;
+            &:hover{
+                cursor: pointer;
+            }
         }
     }
 }
