--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -67,3 +67,22 @@ $secondary-font: 'Red Hat Display';
         }
       }
   }
+
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+            transform: translateX(-20px);
+  }
+}
+
+@keyframes scale-up-center {
+  0% {
+            transform: scale(0.9);
+  }
+  100% {
+            transform: scale(1);
+  }
+}
