--- a/assets/scss/navbar.scss
+++ b/assets/scss/navbar.scss
@@ -1,13 +1,16 @@
 @import "/assets/scss/variables";
 
+.body{
+    overflow: hidden;
+}
 .navbar-content{
     background-color: black;
-    height: 7vh;
     position: absolute;
     top: 0;
-    width:206vh;
+    left: 0;
     display: flex;
     justify-content: space-between;
+    width: 100%;
     .logo{
         position: relative;
         left: 3%;
@@ -36,4 +39,128 @@
             cursor: pointer;
         }
     }
+    #menu-toggle{
+        display: none;
+    }
+    .menu-toggle-icon {
+        cursor: pointer;
+        font-size: 24px;
+        padding: 4% 20px;
+        display: block;
+        color: white;
+        position: absolute;
+        right: 0%;
+        top: -3.4vw;     
+      }
+      
+      .menu-toggle {
+        display: none;
+        position: relative;
+        top: 50%;
+        background-color: black;
+        &.active{
+            display: block;
+        }
+        ul{
+            animation: slide-left 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+            padding: 0;
+            list-style-type: none;
+            li{
+                padding: 5px 0px 5px 20px;
+                &:last-child{
+                    border-bottom: none;
+                }
+                a{
+                    text-decoration: none;
+                    color: white;
+                    font-family: $secondary-font;
+                    display: block;
+                    padding: 10px 20px;
+                }
+            }
+        }
+      }
 }
+
+
+//// Responsive
+/// 
+///
+
+@media screen and (max-width: 2560px){
+    .navbar-content{
+        .logo{
+            margin-top: .5vw;
+            h1{
+                font-size: 2vw;
+            }
+            span{
+                font-size: 2.2vw;
+            }
+        }
+        .menu{
+            p{
+                font-size: 1.2vw;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .navbar-content{
+        height: 7%;
+        .logo{
+            h1{
+                font-size: 2.6vw;
+                span{
+                    font-size: 2.8vw;
+                }
+            }
+        }
+        .menu{
+            p{
+                font-size: 1.3vw;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:768px) {
+    .navbar-content{
+        height: 6.2%;
+        .logo{
+            h1{
+                font-size: 2.8vw;
+                span{
+                    font-size: 3vw;
+                }
+            }
+        }
+        .menu{
+            p{
+                font-size: 1.8vw;
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 430px){
+    .navbar-content{
+        height: 6%;
+        .logo{
+            margin-top: 1%;
+            h1{
+                font-size: 25px;
+            }
+            span{
+                font-size: 27px;
+            }
+        }
+        .menu-toggle{
+            z-index: 1;
+        }
+    }
+}
+
+
