--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -8,60 +8,64 @@ body{
       background-attachment:fixed;
 }
 
-
-.login-container {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    width: 100vh;
-    height: 50vh;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+.container{
     display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    flex-direction: column;
-    color: white;
-    font-family: $primary-font;
-    font-weight: 800;
-    h1{
-        font-family: $primary-title;
-        font-size: 60px;
-        margin: 0;
-    }
-    span{
-        color: $secondary;
-        font-family: $secondary-title;
-        font-size: 58px;
-    }
-    h2{
-        font-family: $primary-font;
-        font-size: 18px;
-    }
-    .buttons{
-        margin-top: 20px;
-        width: 60%;
+    .login-container {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 20px;
+        width: 80vw;
+        height: 70vw;
+        max-width: 500px;
+        min-width: 300px;
+        max-height: 340px;
+        min-height: 300px;
+        margin: 25% 0;
         display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        button{
-            font-family: $secondary-font;
-            font-weight: 800;
-            font-size: 22px;
-            text-transform: uppercase;
-            background-color: transparent;
-            border: none;
-            a{
-                color: white;
-                text-decoration: none;
-            }
-            &:hover{
-                opacity: 0.5;
-                cursor: pointer;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        flex-direction: column;
+        color: white;
+        font-family: $primary-font;
+        font-weight: 800;
+        h1{
+            font-family: $primary-title;
+            font-size: calc(30px + 5vw);
+            margin: 0;
+        }
+        span{
+            color: $secondary;
+            font-family: $secondary-title;
+            font-size: calc(32px + 5vw)
+        }
+        h2{
+            font-family: $primary-font;
+            font-size: calc(1px + 1rem);
+        }
+        .buttons{
+            margin-top: 20px;
+            width: 60%;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+            button{
+                font-family: $secondary-font;
+                font-weight: 800;
+                font-size: calc(4px + 1rem);
+                text-transform: uppercase;
+                background-color: transparent;
+                border: none;
+                padding: 0.5vw 1vw;
+                a{
+                    color: white;
+                    text-decoration: none;
+                }
+                &:hover{
+                    opacity: 0.5;
+                    cursor: pointer;
+                    background-color: $secondary;
+                    border-radius: 10px;
+                }
             }
         }
     }
