--- a/assets/scss/movie-detail.scss
+++ b/assets/scss/movie-detail.scss
@@ -1,7 +1,7 @@
 @import "/assets/scss/variables";
 
 .go-back{
-    margin: 6vw 6vw 0;
+    margin: calc(10px + 6vh) 6vw 0;
     a{
         text-decoration: none;
         button{
@@ -10,7 +10,7 @@
             border: none;
             font-family: $primary-font;
             text-transform: uppercase;
-            font-size: 1.6vw;
+            font-size: calc(8px + 3vh);
             font-weight: 600;
             display: flex;
             align-items: center;
@@ -20,34 +20,67 @@
             }
             span{
                 margin-right: 1vw;
-                font-size: 2vw;
+                font-size: calc(8px + 3vh);
             }
         }
     }
 }
+.title{
+    margin-left: 5vw;
+    h1{
+        font-size: calc(15px + 3vw);
+        font-family: $primary-font;
+        margin-bottom: 0;
+    }
+    h5{
+        margin-top: 0;
+        font-family: $secondary-font;
+        font-size: calc(2px + 2vh);
+    }
+}
 .movie-container{
     border-radius: 20px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     margin: auto;
     display: flex;
     color:white;
-    margin: 3vw 10vw;
+    margin-top: 6vh;
     justify-content: space-around;
+    height: 40vw;
+    width: 85vw;
+    max-width: 990px;
+    min-width: 260px;
+    max-height: 500px;
+    min-height: 250px;
     .details-container{
-        h1{
-            font-size: 3.5vw;
-            font-family: $primary-font;
-            margin-bottom: 0;
-        }
-        h5{
-            margin-top: 0;
+        border-right: 1px solid white;
+        height: max-content;
+        padding-right: 3vw;
+        .ratings{
+            // margin-left: 4vw;
+            // padding: 0 1vw;
             font-family: $secondary-font;
-            font-size: .8vw;
+            h6{
+                font-size: calc(12px + 2vw);
+                margin: 0 0 0;
+                margin-left: -2vw;
+            }
+            ul{
+                // padding-left: 1vw;
+                margin-left: -2vw;
+                font-size: calc(10px + 1vw);
+            }
         }
+        p{
+            margin-top: 3vw;
+            margin-left: -2vw;
+            font-family: $secondary-font;
+            font-size: calc(10px + 0.5vh);
+            width: 40vw;
+            text-align: justify;
+        }
+    }
+    .poster-and-details{
+        margin-left: 1rem;
         .details{
             display: flex;
             .info{
@@ -55,88 +88,14 @@
                 flex-direction: column;
                 font-family: $secondary-font;
                 span{
-                    font-size: 1vw;
-                }
-            }
-            .ratings{
-                border-left: 1px solid white;
-                margin-left: 4vw;
-                padding: 0 1vw;
-                h6{
-                    font-size: 1.3vw;
-                    margin: 0 0 0;
-                }
-                font-family: $secondary-font;
-                ul{
-                    padding-left: 1vw;
-                    font-size: 1.1vw;
-                    list-style:circle
+                    font-size: calc(4px + 1.2vh);
                 }
             }
         }
-        p{
-            margin-top: 3vw;
-            font-family: $secondary-font;
-            font-size: 1.2vw;
-            width: 40vw;
-            text-align: justify;
+        img{
+            height: calc(130px + 12vw);
+            width: calc(90px + 10vw);
+            margin-top: -4vw;
         }
-    }
-    img{
-        height: 30vw;
-        width: 20vw;
-    }
-}
-
-////// Responsive
-/// 
-/// 
-
-@media screen and (max-width:1440px) {
-    .movie-container{
-        margin: 0;
-        margin-bottom: 4vw;
-        position: unset;
-    }
-}
-
-@media screen and (max-width:1024px) {
-    .movie-container{
-        .details-container{
-            h5{
-                font-size: 1.2vw;
-            }
-            .details{
-                .info,.ratings{
-                    span{
-                        font-size: 1.2vw;
-                    }
-                }
-            }
-            p{
-                font-size: 1.5vw;
-                width: 45vw;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .movie-container{
-        margin: 3vw 10vw;
-        height: auto;
-    }
-}
-
-@media screen and (max-width: 425px) {
-    .go-back{
-        margin-top: 12vw;
-        a{
-            button, button span{
-                font-size: 4vw;
-            }
-        }
-    }
-    .movie-container{
     }
 }
