--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -24,6 +24,7 @@
         }
         input{
             border-radius: 20px;
+            color: white;
             border: none;
             height: 5vh;
             width: 50vw;
@@ -129,6 +130,7 @@
             font-weight: 600;
             display: flex;
             align-items: center;
+            color: white;
             &:hover{
                 background-color: $secondary;
                 opacity: 0.5;
