--- a/assets/scss/sign-in.scss
+++ b/assets/scss/sign-in.scss
@@ -60,6 +60,7 @@ body{
                     font-weight: 500;
                 }
                 input{
+                    color: white;
                     width: 270px;
                     height: 35px;
                     border-radius: 30px;
